--- a/thesis/P1-Introduction/introduction.tex
+++ b/thesis/P1-Introduction/introduction.tex
@@ -3,7 +3,17 @@
 \section{FPGAs}
 
 \section{Solving ODEs in vanilla Haskell}
-\lstset{language=Haskell}
+\lstdefinestyle{haskellStyle}{
+  language=Haskell,
+  numbers=left,
+  stepnumber=1,
+  numbersep=10pt,
+  tabsize=4,
+  showspaces=false,
+  showstringspaces=false,
+  basicstyle=\small
+}
+\lstset{style=haskellStyle}
 \lstinputlisting{../haskell/SolverTypes.hs}
 
 \section{Mealy Machines}
