--- a/thesis/Preamble/preamble.tex
+++ b/thesis/Preamble/preamble.tex
@@ -139,6 +139,17 @@
 %\renewcommand{\listfigurename}{My List of Figures}
 %\renewcommand{\listtablename}{My List of Tables}
 
+\lstdefinestyle{haskellStyle}{
+	language=Haskell,
+	numbers=left,
+	stepnumber=1,
+	numbersep=10pt,
+	tabsize=4,
+	showspaces=false,
+	showstringspaces=false,
+	basicstyle=\footnotesize,
+	columns=flexible
+}
 
 % ********************** TOC depth and numbering depth *************************
 
