finished haskell odes

--- a/thesis/References/references.bib
+++ b/thesis/References/references.bib
@@ -1,6 +1,6 @@
 @misc{Bench,
 	title = {Computer Language Benchmarks Game},
-	howpublished = "\url{http://benchmarksgame.alioth.debian.org/u32q/compare.php?lang=ghc&lang2=gcc}",
+	howpublished = "\url{http://benchmarksgame.alioth.debian.org/u32q/which-programs-are-fastest.html}",
 	year = {2015}, 
 	note = "[Accessed: ]"
 }
