--- a/thesis/Preamble/preamble.tex
+++ b/thesis/Preamble/preamble.tex
@@ -78,7 +78,7 @@
 
 % \doublespacing
 % \onehalfspacing
-% \singlespacing
+\singlespacing
 
 
 % ************************ Formatting / Footnote *******************************
@@ -150,6 +150,11 @@
 	basicstyle=\footnotesize,
 	columns=flexible
 }
+\newcommand{\vecb}[1]{\vec{\mathbf{#1}}}
+\newcommand{\matr}[1]{\mathbf{#1}}
+\newcommand{\code}[1]{\lstinline{#1}}
+\newcommand{\sep}{\hspace{50pt}}
+
 
 % ********************** TOC depth and numbering depth *************************
 
