--- a/thesis/P2-Results/results.tex
+++ b/thesis/P2-Results/results.tex
@@ -4,15 +4,24 @@
 
 \chapter{Results}
 
-\section{First order ordinary differential equations}
+\section{Euler's method}
 
-\section{Systems of ordinary differential equations}
+\subsection{Performance}
+\subsection{Accuracy}
 
-\section{Simple partial differential equations}
+\section{Second order Runge-Kutta}
 
-\section{2D Navier-Stokes}
+\subsection{Performance}
+\subsection{Accuracy}
 
-\section{3D Navier-Stokes}
+\section{4th order Runge-Kutta}
+
+\subsection{Performance}
+\subsection{Accuracy}
+
+\section{Comparison with CPU implementations}
+
+\section{Comparison with GPU implementations}
 
 
 
