--- a/thesis/thesis-info.tex
+++ b/thesis/thesis-info.tex
@@ -12,11 +12,18 @@
 \author{Martijn Bakker}
 
 %% Department (eg. Department of Engineering, Maths, Physics)
-\dept{Electrical Engineering, Mathematics and Computer Science (EEMCS)}
+\dept{Committee: \\ 
+	Dr.ir. J. Kuper \\ 
+	Dr. R.M.J. van Damme \\ 
+	Dr.ir. J. Broenink \\ 
+	\vspace{150pt}	
+	Computer Architecture for Embedded Systems
+	Electrical Engineering, Mathematics and Computer Science (EEMCS)
+}
 
 %% University and Crest
 \university{University of Twente}
-\crest{\includegraphics[width=\textwidth]{fpga_wallpaper}}
+%\crest{\includegraphics[width=\textwidth]{fpga_wallpaper}}
 
 %% You can redefine the submission text:
 % Default as per the University guidelines:
@@ -31,7 +38,7 @@
 
 %% Submission date
 % Default is set as {\monthname[\the\month]\space\the\year}
-\degreedate{June 2015} 
+\degreedate{July 2015} 
 
 %% Meta information
 \subject{LaTeX} \keywords{{LaTeX} {PhD Thesis} {Engineering} {University of Cambridge}}
